--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
       "homepage": "https://github.com/vine/wordpress/contributors"
     }
   ],
+  "support": {
+    "forum": "https://wordpress.org/support/plugin/vine"
+  },
   "autoload": {
     "psr-4": {
       "Vine\\": "src/Vine/"
